src/objects/Device__c.object
<CustomObject>
    <fields>
        <fullName>Authenticated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authenticated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <label>Health</label>
        <referenceTo>Health__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supports_Activity_Measures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Activity Measures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supports_Blood_Measures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Blood Measures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supports_Body_Measures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Body Measures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supports_Breath_Measures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Breath Measures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supports_Nutrition_Measures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Nutrition Measures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supports_Sleep_Measures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Sleep Measures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Health__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Device-{0}</displayFormat>
        <label>Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>